test/error/MethodPrivateOverride.fu
abstract class Base
{
	internal abstract void Foo();
}

class Derived : Base
{
	override //ERROR: Private method cannot be override
		void Foo()
	{
	}
}
